Fix section spacing in home page - Move institution alert below <h1> heading

--- a/static/style.css
+++ b/static/style.css
@@ -2028,7 +2028,6 @@ ul.tree ul {
 
     .foi-hm-section {
         contain: size;
-        padding-inline: 0;
     }
 }
 
